# aether_os

./: .env  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
benchmarks/: load_test.js  results.json
brain/: .gitignore  requirements.txt
brain/proto/: aether.proto
brain/src/: main.py
brain/src/rag/: pipeline.py
brain/src/services/: rag_services.py
src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs
src/api/: routes.rs
src/brain/: client.rs  mod.rs
src/core/: bloom.rs  cache.rs  mod.rs  qdrant.rs  rate_limit.rs  vector.rs
src/grpc/: mod.rs
src/middleware/: shield.rs
web_ui/: package-lock.json  package.json
web_ui/src/app/: layout.tsx  page.tsx
