[package]
name = "aether_os"
version = "0.1.0"
edition = "2021"
default-run = "aether_os"

[dependencies]
# ── Web Framework & Async Runtime ─────────────────────────────
axum       = "0.7"
tokio      = { version = "1", features = ["full"] }
tower      = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# ── Serialization ──────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Observability ─────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Error Handling ─────────────────────────────────────────────
thiserror = "1"
anyhow    = "1"

# ── Core Data Structures ───────────────────────────────────────
parking_lot = "0.12"
dashmap     = "6"
uuid        = { version = "1", features = ["v4"] }

# ── AI & Math Engine (THE MATCHED SET) ─────────────────────────
fastembed = "5"
ort = { version = "=2.0.0-rc.11", features = ["load-dynamic"] } 
ndarray   = "0.16"

# ── Database & Serialization ───────────────────────────────────
redis   = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
bincode = "1.3"
qdrant-client = "1.11"

# ── gRPC & Protobufs ───────────────────────────────────────────
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"

# ── Streams (SSE Support) ──────────────────────────────────────
async-stream = "0.3"
futures      = "0.3"
futures-util = "0.3"

# ── Build Dependencies ─────────────────────────────────────────
[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"

# ── Target Definitions ─────────────────────────────────────────
[[bin]]
name = "aether_os"
path = "src/main.rs"

[[bin]]
name = "ingest"
path = "src/bin/ingest.rs"

[lib]
name = "aether_os"
path = "src/lib.rs"